css/styles.css
/* Defining fundamental variables */
:root {
  /* overall color scheme */
  --color-primary: rgb(69, 42, 131);
  --color-accent: red;
  /* color scheme for text*/
  --color-heading-one: #fff;
  --color-heading-two-a: rgb(0, 195, 255);
  --color-heading-two-b: rgb(255, 0, 212);
  --color-heading-three: rgba(204, 255, 228);
  --color-body: lightgrey;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 1.5vw;
  background: linear-gradient(to right, black, rgba(30, 18, 59)), fixed;
}

/* Headers (Mobile) */
h1 {
  color: var(--color-heading-one);
  font-size: 10vw;
  margin-top: 30vh;
}

.glow {
  text-shadow: 0 0 5px #bbbbbb, 0 0 8px #9e9e9e;
}
.center {
  text-align: center;
}
.left {
  text-align: left;
  padding-left: 10%;
}

.glow-pink {
  text-shadow: 0 0 5px #bbbbbb, 0 0 8px #f390ee;
  color: white;
}

h2 {
  font-size: 5vw;
  color: --color-heading-two-a;
}
.blue {
  color: var(--color-heading-two-a);
}

.pink {
  color: var(--color-heading-two-b);
}

h3 {
  font-size: 4vw;
  color: var(--color-heading-three);
  margin-bottom: 0;
}

.eduh4 {
  padding-left: 20%;
}

h4 {
  font-size: 3vw;
  color: white;
  padding-top: none;
  margin: 1rem 0rem 1rem 0rem;
}

body {
  background-color: var(--color-primary);
  font-family: Inter, Arial, Arial, Helvetica, sans-serif;
  color: var(--color-body);
  line-height: 1.5;
}

/* Defining typography for computers */
@media screen and (min-width: 800px) {
  h1 {
    font-size: 8vw;
    margin-top: 15vh;
  }
  h2 {
    font-size: 4vw;
  }
  body {
    font-size: 1.5vw;
  }

  /* Headers */

  h3 {
    font-size: 5vw;
  }
}

/* Defining the header (main div) */
.header {
  width: 100%;
  height: 50vw;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
/* Links */
a {
  text-decoration: none;
}

.link-arrow {
  color: var(--color-accent);
  text-transform: uppercase;
  font-size: 2rem;
  font-weight: bold;
}

.link-arrow::after {
  content: "-->";
  margin-left: 5px;
  transition: margin 0.15s;
}

.link-arrow:hover::after {
  margin-left: 12px;
}

/* Badges */
.badge {
  border-radius: 20px;
  color: #fff;
  font-weight: bold;
  padding: 0.5rem 2rem;
  white-space: nowrap;
}

.badge--frontend {
  background: green;
}

.badge--backend {
  background: blue;
}

.badge--small {
  font-size: 1.4rem;
  padding: 0.5rem 1rem;
}

/* Icons */
.icon {
  width: 45px;
  height: 45px;
}
.icon--white {
  fill: white;
}
.icon--primary {
  fill: var(--color-heading-one);
}

.icon--secondary {
  fill: var(--color-heading-two-a);
}

.icon-container {
  background: var(--color-accent);
  width: 64px;
  height: 64px;
  border-radius: 100%;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

/* Buttons */
.btn {
  font-size: 1.5rem;
  font-weight: 700;
  text-transform: uppercase;
  padding: 1.5rem 3rem;
  border-radius: 20px;
  border: 0;
  box-shadow: 0 0 10px pink;
  margin-bottom: 1rem;
}

.btn:hover {
  background: rgb(245, 127, 215);
}

.btn--accent {
  background: blue;
  color: white;
}

.btn--light {
  background: var(--color-heading-two-b);
  color: var(--color-primary);
}

/* Cards */
.card {
  border-radius: 7px;
  box-shadow: 0 0 30px lightblue;
  overflow: hidden;
}

.card--secondary {
  box-shadow: 0 0 30px pink;
}

.card__header,
.card__body {
  padding: 2rem 3rem;
}

.card--primary .card__header {
  background: var(--color-heading-two-a);
  color: var(--color-primary);
  box-shadow: 0 0 10px blue;
}

.card__body {
  background: white;
  color: var(--color-primary);
  height: 100%;
}

.card--secondary .card__header {
  background: var(--color-heading-two-b);
  color: var(--color-primary);
}

/* Card container */
.card-container__name {
  text-align: center;
}

.card-container {
  margin: 1rem;
  width: 90%;
  transition: transform 0.5s;
}

.card-container:hover {
  transform: scale(107%);
}

@media screen and (min-width: 1024px) {
  .card-container {
    padding: 0;
    margin: 0%;
    width: 27%;
  }

  .card {
    height: 40rem;
  }

  .card-container--center {
    padding: 0;
    width: 30%;
    height: 44rem;
  }
}

/* Three cards */

.three-cards {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
  margin-top: 10vh;
  margin-bottom: 10rem;
}
/* Collapsible */

.collapsible--expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
  margin-top: 0.5rem;
  padding: 0;
}

.collapsible--expanded .nav__toggler {
  opacity: 1;
  box-shadow: 0 0 3px 2px white;
  border-radius: 5px;
}

.collapsible__content {
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  transition: all 0.7s;
}
/* Navigation bar */
.nav {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap-revlisterse;
}

.nav__list {
  width: 100%;
}

.nav__item {
  padding-left: 0.5rem;
  border-bottom: 1px solid #222;
  line-height: 2.5rem;
}

.nav__item > a {
  color: #aaa;
  text-shadow: 0 0 3px #aaa;
  font-size: small;
  transition: color 0.3s;
}

.nav__item > a:hover {
  color: white;
  text-shadow: 0 0 4px white;
}

.nav__toggler {
  opacity: 0.5;
  position: absolute;
  top: 8px;
  right: 16px;
  transition: box-shadow 0.15s;
  cursor: pointer;
}

@media screen and (min-width: 768px) {
  .nav__toggler {
    display: none;
  }

  .nav {
    display: flex;
    background-color: #111;
    justify-content: flex-end;
    align-content: center;
    width: 100%;
    position: fixed;
    align-items: center;
  }

  .nav__item {
    border: none;
    margin: 2rem;
  }

  .nav__item > a {
    font-size: 2vw;
    margin: 1rem 1rem 1rem 1rem;
  }

  .nav__list {
    width: auto;
    display: flex;
    flex-wrap: wrap;
    font-size: 1.6rem;
    max-height: 100vh;
    opacity: 1;
    padding: 0;
  }

  .collapsible--expanded .collapsible__content {
    max-height: 100vh;
    opacity: 1;
    margin-top: 2rem;
    padding: 0;
  }

  .collapsible__content {
    max-height: 100vh;
    opacity: 1;
    margin-top: 2rem;
    padding: 0;
  }
}
@media screen and (min-width: 1024px) {
  .nav__item > a {
    font-size: 1.5vw;
    margin: 1rem 1rem 1rem 1rem;
  }
}

/* Lists */
.list {
  list-style: none;
  color: --color-heading-one;
}

.list--tick {
  list-style-image: url(../images/tick.svg);
  padding-left: 3rem;
}

.list--tick .list__item {
  list-style-image: url(../images/tick.svg);
  padding-left: 0.5rem;
  margin-bottom: 0.5rem;
}

/* Links (computers) */
@media screen and (min-width: 1024px) {
  .link-arrow {
    font-size: 1.5rem;
  }
}

/* Creating the cursor for the text */
.typewrite > .wrap {
  border-right: 0.08em solid white;
}

/* Education */

.education__list {
  list-style: none;
}

.education__list__list {
  list-style: none;
  padding-left: 25%;
  text-shadow: 0 0 3px #fff;
}

.list-odd {
  color: rgb(255, 96, 96);
  text-shadow: 0 0 10px red;
  place-content: right;
  text-align: right;
  margin-right: 10%;
}

.odd-list-item {
  text-align: right;
  margin-right: 15%;
  color: rgb(255, 96, 96);
  text-shadow: 0 0 4px red;
  list-style: none;
}

